--- a/RaspberryPi/node_apps/index.html
+++ b/RaspberryPi/node_apps/index.html
@@ -2,27 +2,42 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>node_app</title>
+<title>NodeAppConfig</title>
 </head>
 <body>
-  <h4>node app config</h4>
-  <input id="config" />
-  <button onclick="getConfig()">Get/Set Config</button><br/>
-  <p id="config_str"></p>
+  <div class="maindiv">
+    <h4>NodeAppConfig</h4>
+    <input id="config" style="height:28px" />
+    <button onclick="getConfig()" style="height:28px">Get/Set Config</button><br/>
+    <textarea rows="10" cols="60" id="config_msg" disabled style="font-family: '微软雅黑'"></textarea>
+  </div>
 </body>
 <script>
 console.log("Date: " + new Date());
+document.getElementById('config_msg').value = new Date()
 function getConfig() {
-  var httpRequest = new XMLHttpRequest();//第一步：建立所需的对象
-  httpRequest.open('GET', '/config' + '?' + document.getElementById('config').value, true);//第二步：打开连接  将请求参数写在url中  ps:"./Ptest.php?name=test&nameone=testone"
-  httpRequest.send();//第三步：发送请求  将请求参数写在URL中
+  //第一步：建立所需的对象
+  var httpRequest = new XMLHttpRequest();
+  //第二步：打开连接  将请求参数写在URL中 ps:"./Ptest.php?name=test&nameone=testone"
+  httpRequest.open('GET', '/config' + '?' + document.getElementById('config').value, true);
+  //第三步：发送请求
+  httpRequest.send();
   httpRequest.onreadystatechange = function () {
     if (httpRequest.readyState == 4 && httpRequest.status == 200) {
-      var json = httpRequest.responseText;//获取到json字符串，还需解析
-      // alert(json);
-      document.getElementById('config_str').innerHTML = json
+      var json = httpRequest.responseText;  //获取到json字符串，还需解析
+      // alert(JSON.stringify(JSON.parse(json), null, '\t'));
+      document.getElementById('config_msg').value = JSON.stringify(JSON.parse(json), null, '\t')
     }
   };
 }
 </script>
+<style>
+.maindiv {
+  width:98%;
+  border: 2px solid gray;
+  border-radius: 5px;
+  display: grid;
+  place-content: center;
+}
+</style>
 </html>
