--- a/RaspberryPi/node_apps/index.html
+++ b/RaspberryPi/node_apps/index.html
@@ -33,7 +33,8 @@ function getConfig() {
 </script>
 <style>
 .maindiv {
-  width:98%;
+  width:98vw;
+  height: 60vh;
   border: 2px solid gray;
   border-radius: 5px;
   display: grid;
